@@ -28,15 +28,14 @@ import io.crate.analyze.InsertFromSubQueryAnalyzedStatement;
 import io.crate.analyze.MultiSourceSelect;
 import io.crate.analyze.OrderBy;
 import io.crate.analyze.QueriedSelectRelation;
-import io.crate.analyze.QueriedTable;
 import io.crate.analyze.WhereClause;
 import io.crate.analyze.relations.AbstractTableRelation;
 import io.crate.analyze.relations.AliasedAnalyzedRelation;
 import io.crate.analyze.relations.AnalyzedRelation;
 import io.crate.analyze.relations.AnalyzedView;
 import io.crate.analyze.relations.DocTableRelation;
-import io.crate.analyze.relations.OrderedLimitedRelation;
 import io.crate.analyze.relations.RelationNormalizer;
+import io.crate.analyze.relations.TableRelation;
 import io.crate.analyze.relations.UnionSelect;
 import io.crate.analyze.where.DocKeys;
 import io.crate.data.Row;
@@ -170,7 +169,9 @@ public class LogicalPlanner {
             plannerContext.transactionContext());
 
         planBuilder = tryOptimizeForInSubquery(selectSymbol, relation, planBuilder);
-        LogicalPlan optimizedPlan = tryOptimize(maybeApplySoftLimit.apply(planBuilder.build(tableStats, Collections.emptySet())));
+        LogicalPlan optimizedPlan = optimizer.optimize(maybeApplySoftLimit.apply(planBuilder.build(tableStats,
+                                                                                                   Set.of(),
+                                                                                                   Collections.emptySet())));
         return new RootRelationBoundary(MultiPhase.createIfNeeded(optimizedPlan, relation, subqueryPlanner));
     }
 
@@ -193,24 +194,15 @@ public class LogicalPlanner {
     public LogicalPlan normalizeAndPlan(AnalyzedRelation analyzedRelation,
                                         PlannerContext plannerContext,
                                         SubqueryPlanner subqueryPlanner,
-                                        FetchMode fetchMode) {
+                                        FetchMode fetchMode,
+                                        Set<PlanHint> hints) {
         CoordinatorTxnCtx coordinatorTxnCtx = plannerContext.transactionContext();
         AnalyzedRelation relation = relationNormalizer.normalize(analyzedRelation, coordinatorTxnCtx);
         LogicalPlan logicalPlan = plan(relation, fetchMode, subqueryPlanner, true, functions, coordinatorTxnCtx)
-            .build(tableStats, new HashSet<>(relation.outputs()));
+            .build(tableStats, hints, new HashSet<>(relation.outputs()));
 
-        LogicalPlan optimizedPlan = tryOptimize(logicalPlan);
-
+        LogicalPlan optimizedPlan = optimizer.optimize(logicalPlan);
         return MultiPhase.createIfNeeded(optimizedPlan, relation, subqueryPlanner);
-    }
-
-    /**
-     * Runs {@link LogicalPlan}.tryOptimize and returns an optimized plan.
-     * @param plan The original plan
-     * @return The optimized plan or the original if optimizing is not possible
-     */
-    private LogicalPlan tryOptimize(LogicalPlan plan) {
-        return optimizer.optimize(plan);
     }
 
     static LogicalPlan.Builder plan(AnalyzedRelation relation,
@@ -281,8 +273,8 @@ public class LogicalPlanner {
             return GroupHashAggregate.create(source, groupKeys, aggregates);
         }
         if (!aggregates.isEmpty()) {
-            return (tableStats, usedColumns) ->
-                new HashAggregate(source.build(tableStats, extractColumns(aggregates)), aggregates);
+            return (tableStats, hints, usedColumns) ->
+                new HashAggregate(source.build(tableStats, hints, extractColumns(aggregates)), aggregates);
         }
         return source;
     }
@@ -303,12 +295,18 @@ public class LogicalPlanner {
         if (analyzedRelation instanceof AbstractTableRelation) {
             return Collect.create(((AbstractTableRelation) analyzedRelation), toCollect, where);
         }
-        if (analyzedRelation instanceof QueriedTable) {
-            QueriedTable queriedTable = (QueriedTable) analyzedRelation;
-            AbstractTableRelation tableRelation = queriedTable.tableRelation();
+        if (analyzedRelation instanceof MultiSourceSelect) {
+            return JoinPlanBuilder.createNodes((MultiSourceSelect) analyzedRelation, where, subqueryPlanner, functions, txnCtx);
+        }
+        if (analyzedRelation instanceof UnionSelect) {
+            return Union.create((UnionSelect) analyzedRelation, subqueryPlanner, functions, txnCtx);
+        }
+        if (analyzedRelation instanceof QueriedSelectRelation) {
+            QueriedSelectRelation<?> selectRelation = (QueriedSelectRelation) analyzedRelation;
 
-            if (tableRelation instanceof DocTableRelation) {
-                DocTableRelation docTableRelation = (DocTableRelation) tableRelation;
+            AnalyzedRelation subRelation = selectRelation.subRelation();
+            if (subRelation instanceof DocTableRelation) {
+                DocTableRelation docTableRelation = (DocTableRelation) subRelation;
                 EvaluatingNormalizer normalizer = new EvaluatingNormalizer(
                     functions, RowGranularity.CLUSTER, null, docTableRelation);
 
@@ -321,7 +319,7 @@ public class LogicalPlanner {
 
                 Optional<DocKeys> docKeys = detailedQuery.docKeys();
                 if (docKeys.isPresent()) {
-                    return (tableStats, usedBeforeNextFetch) ->
+                    return (tableStats, hints, usedBeforeNextFetch) ->
                         new Get(docTableRelation, docKeys.get(), toCollect, tableStats);
                 }
                 return Collect.create(docTableRelation, toCollect, new WhereClause(
@@ -329,22 +327,11 @@ public class LogicalPlanner {
                     where.partitions(),
                     detailedQuery.clusteredBy()
                 ));
+            } else if (subRelation instanceof TableRelation) {
+                return Collect.create(((TableRelation) subRelation), toCollect, where);
             }
-            return Collect.create(tableRelation, toCollect, where);
-        }
-        if (analyzedRelation instanceof MultiSourceSelect) {
-            return JoinPlanBuilder.createNodes((MultiSourceSelect) analyzedRelation, where, subqueryPlanner, functions, txnCtx);
-        }
-        if (analyzedRelation instanceof UnionSelect) {
-            return Union.create((UnionSelect) analyzedRelation, subqueryPlanner, functions, txnCtx);
-        }
-        if (analyzedRelation instanceof OrderedLimitedRelation) {
-            return plan(((OrderedLimitedRelation) analyzedRelation).childRelation(), fetchMode, subqueryPlanner, false, functions, txnCtx);
-        }
-        if (analyzedRelation instanceof QueriedSelectRelation) {
-            QueriedSelectRelation selectRelation = (QueriedSelectRelation) analyzedRelation;
             return Filter.create(
-                plan(selectRelation.subRelation(), fetchMode, subqueryPlanner, false, functions, txnCtx),
+                plan(subRelation, fetchMode, subqueryPlanner, false, functions, txnCtx),
                 where
             );
         }
@@ -438,7 +425,7 @@ public class LogicalPlanner {
         @Override
         public LogicalPlan visitSelectStatement(AnalyzedRelation relation, PlannerContext context) {
             SubqueryPlanner subqueryPlanner = new SubqueryPlanner((s) -> planSubSelect(s, context));
-            LogicalPlan logicalPlan = normalizeAndPlan(relation, context, subqueryPlanner, FetchMode.MAYBE_CLEAR);
+            LogicalPlan logicalPlan = normalizeAndPlan(relation, context, subqueryPlanner, FetchMode.MAYBE_CLEAR, Set.of());
             return new RootRelationBoundary(logicalPlan);
         }
 
