@@ -24,7 +24,6 @@ package io.crate.planner.operators;
 
 import com.carrotsearch.hppc.ObjectObjectHashMap;
 import io.crate.analyze.MultiSourceSelect;
-import io.crate.analyze.QueriedTable;
 import io.crate.data.Row;
 import io.crate.execution.dsl.phases.HashJoinPhase;
 import io.crate.execution.dsl.phases.NestedLoopPhase;
@@ -55,7 +54,7 @@ import org.junit.Before;
 import org.junit.Test;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.Set;
 
 import static io.crate.analyze.TableDefinitions.TEST_DOC_LOCATIONS_TABLE_DEFINITION;
 import static io.crate.analyze.TableDefinitions.USER_TABLE_DEFINITION;
@@ -104,7 +103,7 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
         LogicalPlanner logicalPlanner = new LogicalPlanner(functions, tableStats);
         SubqueryPlanner subqueryPlanner = new SubqueryPlanner((s) -> logicalPlanner.planSubSelect(s, plannerCtx));
         return JoinPlanBuilder.createNodes(mss, mss.where(), subqueryPlanner, functions, txnCtx)
-            .build(tableStats, Collections.emptySet());
+            .build(tableStats, Set.of(), Set.of());
     }
 
     private Join buildJoin(LogicalPlan operator) {
@@ -185,7 +184,7 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
         LogicalPlanner logicalPlanner = new LogicalPlanner(functions, tableStats);
         SubqueryPlanner subqueryPlanner = new SubqueryPlanner((s) -> logicalPlanner.planSubSelect(s, context));
         LogicalPlan operator = JoinPlanBuilder.createNodes(mss, mss.where(), subqueryPlanner, e.functions(), txnCtx)
-            .build(tableStats, Collections.emptySet());
+            .build(tableStats, Set.of(), Set.of());
         Join nl = (Join) operator.build(
             context, projectionBuilder, -1, 0, null, null, Row.EMPTY, SubQueryResults.EMPTY);
 
@@ -468,7 +467,7 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
 
     /**
      * This scenario will result having a {@link io.crate.analyze.relations.AbstractTableRelation} as a direct
-     * child of the {@link MultiSourceSelect} instead of a {@link QueriedTable} before ANY optimization
+     * child of the {@link MultiSourceSelect} instead of a {@link io.crate.analyze.QueriedSelectRelation} before ANY optimization
      * and validates that the plan can be build.
      *
      */
